# car_workshop-maximizer

./: .gitignore  Dockerfile  Electricidad.py  README.md  iv.yaml  pyproject.toml  requirements.txt  tasks.py
.circleci/: config.yml
.github/workflows/: actualiza_docker.yaml  sync_docker.yml  test_app.yml
docs/: configurar_git.md  perfil_usuarios.md
logs/: log.txt
src/: Calendario.py  Electricidad.py  Funciones.py  GestionReparaciones.py  Reparaciones.py  Vehiculo.py  config.py  logger.py  manejador.py  test.py
test/: test_manejador.py  test_reparaciones.py  test_vehiculos.py
