[tool.poetry]
name = "car_workshop-maximizer"
version = "0.1.0"
description = "Proyecto para optimizar el tiempo de reparacion de vehiculos en talleres"
authors = ["Joaquín García Venegas <joaquingv12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pyflakes = "^2.4.0"
etcd3 = "^0.12.0"
python-dotenv = "^0.19.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
